--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,10 @@ html {
   --pomodoro: hsl(223, 25%, 40%);
   --shortBreak: hsl(48, 23%, 40%);
   --longBreak: hsl(105, 16%, 40%);
-  --bgc: var(--pomodoro);
 }
 
 body {
-  background-color: var(--bgc);
+  background-color: var(--pomodoro);
   transition: background-color 1s ease;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   user-select: none;
